--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -13,3 +13,6 @@ $lightBlue: #e6f4ff;
 $lightYellow: #fff5e6;
 
 $white: #fff;
+
+$font-big: 2.1rem;
+$font-med: 1.6rem;
