--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -25,7 +25,8 @@ body {
 
 .linkout {
   font-weight: 700;
-  font-size: 2rem;
+  font-size: 2.1rem;
+  letter-spacing: 0.2rem;
 }
 
 .flex {
@@ -44,10 +45,13 @@ body {
 .header___logo img {
   width: 100%;
 }
+.header__nav {
+  margin-bottom: 0.1rem;
+}
 .header__nav-item {
   list-style: none;
   margin-bottom: 1rem;
-  font-size: 2rem;
+  font-size: 2.1rem;
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 0.2rem;
